--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,11 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+  font-family: 'Segoe UI', 'Roboto',
       'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
       'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 16px;
 }
 
 nav {
@@ -28,6 +29,58 @@ nav {
   right: 0.5rem;
 }
 
+
 label:not(:last-child) {
   margin-right: 1rem;
 }
+
+.row{
+  margin-bottom: 0;
+}
+
+
+.card.movie {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.card {
+  flex-grow: 1;  /* Позволяет карточке расти и заполнять доступное пространство */
+}
+
+
+
+.card-title{
+  position: absolute;
+  margin-left: 10px;
+}
+
+.card-image {
+  margin-bottom: 20px;
+}
+
+.card {
+  padding: 10px;
+
+}
+
+.card-box-image {
+  position: relative; /* Добавляем относительное позиционирование для контейнера изображения */
+}
+
+.type-movie {
+  position: absolute; /* Абсолютное позиционирование */
+  top: 10px; /* Отступ от верхнего края */
+  right: 10px; /* Отступ от правого края */
+  background-color: rgba(255, 255, 255, 0.8); /* Полупрозрачный фон для лучшей видимости */
+  color: rgb(0, 0, 0); /* Белый текст */
+  padding: 5px; /* Отступы внутри */
+  border-radius: 3px; /* Скругленные углы */
+  z-index: 3;
+}
+
+
+
+
+
